--- a/1.todolist.md
+++ b/1.todolist.md
@@ -13,10 +13,13 @@ rpx与px概念
 简单来说，rpx iphone6的设备宽高比为750 * 1334，如果设计给出的基于iphon6的设计来说
 ```
 * 
-* 框架介绍 mpvue和taro
+* 框架介绍 wepy mpvue和taro
 * 
 
 ## todolist
-列表功能，
-增加删除，以及状态修改
+1. 首先我们需要一个列表功能。
+
+2. 增加add button
+
+3. 状态变化
 
