--- a/1.todolist.md
+++ b/1.todolist.md
@@ -17,9 +17,17 @@ rpx与px概念
 * 
 
 ## todolist
+
+一个简单的todolist的设计图是如下这样的。
+
+![](image/1/todo_prototype.png)
+
 1. 首先我们需要一个列表功能。
 
 2. 增加add button
 
 3. 状态变化
 
+
+
+# 代码可以在以下地址下载
