--- a/1.todolist.md
+++ b/1.todolist.md
@@ -10,37 +10,66 @@
    但是小程序开发并不只是有客户端的代码就可以的，现实中的小程序绝大多数都是要包括客户端和服务端的。
    由浅入深，本章节将首先介绍一个纯客户端的小程序是如何实现的。
    
-   + 原理上来说，微信小程序是运行在
-   
-   ```
-   底层实现原理
-
-    ```
-   + 开发上来说，微信小程序像极了web开发的。如果你熟悉web开发，上手微信小程序对你来说将不是难事。
+   + 开发上来说，微信小程序开发像极了web开发的，技术栈是javascript/wxml/wxss。如果你熟悉web开发，上手微信小程序对你来说将不是难事。
    如果你还拥有vue的开发经验，你将感到小程序开发是多么的似曾相识。
    
+   + 原理上来说，一个微信小程序是一个代码包，代码包里打包了javascript/wxml/wxss的代码。
+   这个代码包可以运行在三个不同的环境上，ios、android以及小程序开发者工具上。
+  
+      ```
+      运行原理
+      微信小程序的运行环境包含两个层
+      在ios上，小程序的javascript代码运行在 JavaScriptCore 中
+      在android上，小程序的javascript是通过 X5 内核来解析
+      在
+               
+       ```
    
 2. 开发的准备工作
   
-   + 需要在微信公众平台（mp.weixin.qq.com）上注册一个账号。
+   + 需要在微信公众平台（mp.weixin.qq.com）上注册一个账号。微信公众平台最重要的功能是发布你的小程序，只有发布小程序并通过审核之后的，
+   你的小程序才能被其他用户在微信中搜索到并使用。
    
    ![](image/1/mp_weixin.png)
    
-   邮箱注册登录之后，会进行小程序主体的选择。
+   邮箱注册登录之后，会进行小程序主体的选择。主体类型包括个人，企业，政府和其他组织四种，不同的主体选择会有不同的功能限制。
    
    ```
    主体选择的区别
-
-    ```
-   可以看到微信公众平台上提供了很多功能。
+   ```
+    
+   而当你的小程序上线之后，如果要变更主体也并不是很简单的。
+    
+   ```
+    主体变更
+   ```
+   可以看到微信公众平台上提供了很多功能。功能主要划分为主要有以下几个板块，具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
    
+    + 下载微信小程序开发工具
 
-3. 
+## TODOLIST
+
+这一节中，我们将详细介绍如何实现一个纯客户端的todolist小程序。
+在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址下载。
 
 
-小程序 介绍基本概念
-* 准备工作
-* wxml wxss
+  ![](image/1/mp_search.png)
+  
+  ![](image/1/qr_code.png)
+    
+我们最终所要实现的效果图如下:
+    
+  ![](image/1/demo.png)
+
+一个小程序代码典型结构是这样：
+![](image/1/code_proto.png)
+其中页面由以下这几个部分组成。
+index.js
+index.wxml
+.wxss 
+
+
+
 ```
 rpx与px概念
 在h5开发中， rpx的意思是responsive pixel
@@ -49,15 +78,8 @@ rpx与px概念
 微信规定屏幕宽为750rpx。
 简单来说，rpx iphone6的设备宽高比为750 * 1334，如果设计给出的基于iphon6的设计来说
 ```
-* 
-* 框架介绍 wepy mpvue和taro
-* 
 
-## todolist
 
-一个简单的todolist的设计图是如下这样的。
-
-![](image/1/todo_prototype.png)
 
 1. 首先我们需要一个列表功能。
 
@@ -66,6 +88,10 @@ rpx与px概念
 3. 状态变化
 
 
+# 参考资料
+微信小程序认证有哪些主体类别？  https://www.sohu.com/a/165305873_99940999
+主体功能差异 http://blog.sina.com.cn/s/blog_ed7dae4a0102xjb2.html
+微信小程序原理 http://eux.baidu.com/blog/fe/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E6%9E%B6%E6%9E%84%E5%8E%9F%E7%90%86
 
-# 
-代码可以在以下地址下载，同时在微信小程序中可以搜索20天之todolist即可使用。
+开发者工具 https://blog.csdn.net/qq_17470165/article/details/80200857
+https://blog.csdn.net/u012767761/article/details/81151830
