--- a/1.todolist.md
+++ b/1.todolist.md
@@ -1,10 +1,10 @@
-# todolist
+# 1.todolist
 
 在本章节将会介绍微信小程序开发的入门知识，并且详细地介绍如何实现一个todolist（待办事项）小程序。
 
-## 小程序入门
+## 1.1小程序入门
 
-1. 小程序是什么？
+### 1.1.1 小程序是什么？
 
    + 本质上来说，微信小程序跟web和app是一样的，都是一种客户端，是一种用户交互的载体。
    但是小程序开发并不只是有客户端的代码就可以的，现实中的小程序绝大多数都是要包括客户端和服务端的。
@@ -25,7 +25,7 @@
                
        ```
    
-2. 开发的准备工作
+### 1.1.2 开发的准备工作
   
    + 需要在微信公众平台（mp.weixin.qq.com）上注册一个账号。微信公众平台最重要的功能是发布你的小程序，只有发布小程序并通过审核之后的，
    你的小程序才能被其他用户在微信中搜索到并使用。
@@ -47,21 +47,22 @@
    
     + 下载微信小程序开发工具
 
-## TODOLIST
+##1.2 开发TODOLIST
 
 这一节中，我们将详细介绍如何实现一个纯客户端的todolist小程序。
 在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址下载。
 
 
-  ![](image/1/mp_search.png)
+  ![](image/1/mp_search.jpg)
   
-  ![](image/1/qr_code.png)
+  ![](image/1/qr_code.jpg)
     
 我们最终所要实现的效果图如下:
     
-  ![](image/1/demo.png)
+  ![](image/1/demo.jpg)
 
 一个小程序代码典型结构是这样：
+
 ![](image/1/code_proto.png)
 其中页面由以下这几个部分组成。
 index.js
