--- a/1.todolist.md
+++ b/1.todolist.md
@@ -53,9 +53,9 @@
 在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址下载。
 
 
-  ![](image/1/mp_search.jpg)
+  ![](image/1/mp_search.jpg =300)
   
-  ![](image/1/qr_code.jpg)
+  ![](image/1/qr_code.jpg =300)
     
 我们最终所要实现的效果图如下:
     
@@ -64,7 +64,9 @@
 一个小程序代码典型结构是这样：
 
 ![](image/1/code_proto.png)
+
 其中页面由以下这几个部分组成。
+
 index.js
 index.wxml
 .wxss 
