--- a/1.todolist.md
+++ b/1.todolist.md
@@ -52,7 +52,7 @@
 这一节中，我们将详细介绍如何实现一个纯客户端的todolist小程序。
 在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址下载。
 
-
+<img src="image/1/mp_search.jpg" width="300">
   ![](image/1/mp_search.jpg =300)
   
   ![](image/1/qr_code.jpg =300)
