--- a/1.todolist.md
+++ b/1.todolist.md
@@ -47,23 +47,26 @@
    
     + 下载微信小程序开发工具
 
-##1.2 开发TODOLIST
+## 1.2 开发TODOLIST
 
 这一节中，我们将详细介绍如何实现一个纯客户端的todolist小程序。
-在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址下载。
+在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址()下载。
 
 <img src="image/1/mp_search.jpg" width="300">
-  ![](image/1/mp_search.jpg =300)
-  
-  ![](image/1/qr_code.jpg =300)
+
+
+<img src="image/1/qr_code.jpg" width="300">
+
     
 我们最终所要实现的效果图如下:
     
-  ![](image/1/demo.jpg)
+<img src="image/1/demo.jpg" width="300">    
+  
 
 一个小程序代码典型结构是这样：
 
-![](image/1/code_proto.png)
+<img src="image/1/code_proto.jpg" width="300">    
+
 
 其中页面由以下这几个部分组成。
 
