--- a/1.todolist.md
+++ b/1.todolist.md
@@ -32,11 +32,22 @@
    
    ![](image/1/mp_weixin.png)
    
-   邮箱注册登录之后，会进行小程序主体的选择。主体类型包括个人，企业，政府和其他组织四种，不同的主体选择会有不同的功能限制。
+   邮箱注册登录之后，会进行小程序主体的选择。
    
-   ```
-   主体选择的区别
-   ```
+   <img src="image/1/mp_select_owner.jpg" width="300">
+   
+   主体类型包括个人，企业，政府，媒体和其他组织五种，不同的主体选择会有不同的功能限制。这里建议一般读者选择个人主体即可。
+      
+
+   <p>
+   
+   <span>*主体选择的区别*</span>
+   
+                
+                
+   
+   
+   </p>
     
    而当你的小程序上线之后，如果要变更主体也并不是很简单的。
     
@@ -45,7 +56,7 @@
    ```
    可以看到微信公众平台上提供了很多功能。功能主要划分为主要有以下几个板块，具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
    
-    + 下载微信小程序开发工具
+   + 下载微信小程序开发工具
 
 ## 1.2 开发TODOLIST
 
