--- a/1.todolist.md
+++ b/1.todolist.md
@@ -39,7 +39,7 @@
    主体类型包括个人，企业，政府，媒体和其他组织五种，不同的主体选择会有不同的功能限制。这里建议一般读者选择个人主体即可。
       
 
-   <p>
+   <p sytle="background-color:#333333">
    
    <span>*主体选择的区别*</span>
    
