--- a/1.todolist.md
+++ b/1.todolist.md
@@ -37,23 +37,24 @@
    <img src="image/1/mp_select_owner.jpg" width="300">
    
    主体类型包括个人，企业，政府，媒体和其他组织五种，不同的主体选择会有不同的功能限制。这里建议一般读者选择个人主体即可。
+   
       
+> **主体选择的区别** 
+>
+> | item  | value |
+> | ----- | ----- |
+> | 23232 | 2323  |
+> |    x  |    x |
+>              
+   
 
-   <p sytle="background-color:#333333">
-   
-   <span>*主体选择的区别*</span>
-   
-                
-                
-   
-   
-   </p>
-    
    而当你的小程序上线之后，如果要变更主体也并不是很简单的。
     
-   ```
-    主体变更
-   ```
+> 主体变更
+>
+>
+>
+
    可以看到微信公众平台上提供了很多功能。功能主要划分为主要有以下几个板块，具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
    
    + 下载微信小程序开发工具
