--- a/1.todolist.md
+++ b/1.todolist.md
@@ -40,12 +40,22 @@
    
       
 > **主体选择的区别** 
+> 
+> 
+> 选择不同的主体都需要提交相关的资料，比如说选择个人主体需要提交用户的真实身份证信息，选择企业主体的话需要提交公司的营业执照等信息。
+> 除了提交资料之外，如果需要使用更多功能（如支付功能），还需要进行微信认证。暂时个人主体不支持微信认证，这也就意味着个人主体的小程序很多功能是无法使用的。
+> 
 >
-> | item  | value |
-> | ----- | ----- |
-> | 23232 | 2323  |
-> |    x  |    x |
->              
+> | 主体类型  | 申请微信认证 | 使用微信支付 | 开发者上限 | 「附近的小程序」展示
+> | ----- | ----- | ----- | ----- | ----- |
+> | 个人  | ☓   |  ☓   | 10   | ☓   |
+> | 企业（未认证）  |  √ |   ☓   | 10   | ☓   |
+> | 企业（已认证）  |  √ |   √   | 20   | √   |
+> 
+> _政府、媒体和其他组织与企业相类似_
+>            
+> 
+> 如果还有
    
 
    而当你的小程序上线之后，如果要变更主体也并不是很简单的。
