--- a/1.todolist.md
+++ b/1.todolist.md
@@ -34,7 +34,7 @@
    
    邮箱注册登录之后，会进行小程序主体的选择。
    
-   <img src="image/1/mp_select_owner.jpg" width="300">
+   <img src="image/1/mp_select_owner.png" width="300">
    
    主体类型包括个人，企业，政府，媒体和其他组织五种，不同的主体选择会有不同的功能限制。这里建议一般读者选择个人主体即可。
    
@@ -52,18 +52,33 @@
 > | 企业（未认证）  |  √ |   ☓   | 10   | ☓   |
 > | 企业（已认证）  |  √ |   √   | 20   | √   |
 > 
-> _政府、媒体和其他组织与企业相类似_
+> _**政府、媒体和其他组织与企业相类似_
 >            
+> 微信认证需要提交材料到第三方认证并缴纳一定的费用，现在的定价是300元的手续费。并且微信认证并不是永久有效的，每年需要缴纳费用保持微信认证资格。
 > 
-> 如果还有
-   
+> <img src="image/1/mp_author.png" width="300">
+> 
+> 对于未微信认证的小程序，暂时发现的受限制功能如下：
+> 1. 微信支付功能
+> 2. 卡券功能
+> 3.「附近的小程序」功能
+> 4. 获取微信用户绑定的手机号码
+> 
+> 除上述功能之外，其他功能是能够同样的使用的。大部分的读者可能无法完成微信认证，为了满足读者的需要，这些受限制的功能在后面的章节中也会进行介绍。
 
-   而当你的小程序上线之后，如果要变更主体也并不是很简单的。
+
+   而当你的小程序上线之后，如果需要变更主体，小程序官方提供了小程序主体迁移功能，但是手续也并不简单。因此如果你的小程序需要长远发展（尤其涉及到商业方面），在选择主体的时候需要慎重考虑。
     
-> 主体变更
+> **主体迁移**
+> 主体有几个注意事项，详细信息可以参考官方文档（http://kf.qq.com/faq/180830iEVNVB180830ZRvMVJ.html）
+> 1. 目前只支持个人主体迁移到组织主体，组织主体迁移到组织主体。目标主体不支持为个人类型。
+> 2. 跟微信认证类似，无论迁移是否成功，小程序的迁移需要缴纳300元手续费。
+> 3. 开通了微信支付的小程序在迁移之前，需要先解绑原来的商户账号。为了保持支付不中断，建议先绑定信的商户账户，再解绑原主体的商户号
 >
->
->
+> 如果不选择使用主体迁移功能，可以在原有小程序上引导用户跳转至新的小程序。
+> 但是使用这种"人肉迁移"的方式，在迁移过程中不可避免的会造成数据流失和用户流失。首先因为微信小程序用UnionID来识别不同的用户，但是在不同的
+> 的主体下，即使是相同的用户的UnionID也并不相同。所以"人肉迁移"后只能通过其他的方式映射新老小程序的用户数据了。其次，这种引导用户跳转到新小程序的过程中，需要
+> 用户每次手动点击确定，这几乎是必然地带来一部分用户流失。
 
    可以看到微信公众平台上提供了很多功能。功能主要划分为主要有以下几个板块，具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
    
