--- a/1.todolist.md
+++ b/1.todolist.md
@@ -1,6 +1,6 @@
 # 1.todolist
 
-在本章节将会介绍微信小程序开发的入门知识，并且详细地介绍如何实现一个todolist（待办事项）小程序。
+在本章节将会介绍微信小程序开发的入门知识，并且详细地介绍如何实现并发布一个todolist（待办事项）小程序。
 
 ## 1.1小程序入门
 
@@ -43,6 +43,7 @@
 > 
 > 
 > 选择不同的主体都需要提交相关的资料，比如说选择个人主体需要提交用户的真实身份证信息，选择企业主体的话需要提交公司的营业执照等信息。
+> 此外，个人主体和非个人主体的服务类目也有较大区别。非个体的部分服务类目还需要提供更多的附加材料，比如"文娱-小说-电子书"服务，需要提供《互联网出版许可证》等材料。
 > 除了提交资料之外，如果需要使用更多功能（如支付功能），还需要进行微信认证。暂时个人主体不支持微信认证，这也就意味着个人主体的小程序很多功能是无法使用的。
 > 
 >
@@ -80,19 +81,24 @@
 > 的主体下，即使是相同的用户的UnionID也并不相同。所以"人肉迁移"后只能通过其他的方式映射新老小程序的用户数据了。其次，这种引导用户跳转到新小程序的过程中，需要
 > 用户每次手动点击确定，这几乎是必然地带来一部分用户流失。
 
-   可以看到微信公众平台上提供了很多功能。功能主要划分为主要有以下几个板块，具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
+   可以看到微信公众平台上提供了很多功能。功能主要划分为主要有管理、统计、功能、开发、推广和设置板块，
+   具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
+   
+   <img src="image/1/mp_webui.jpg" width="300">
    
    + 下载微信小程序开发工具
+   
+   注册完微信公众平台账号之后，在开始小程序的开发之前，我们还需要下载微信官方提供的小程序开发工具。
+
 
 ## 1.2 开发TODOLIST
 
 这一节中，我们将详细介绍如何实现一个纯客户端的todolist小程序。
 在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址()下载。
 
-<img src="image/1/mp_search.jpg" width="300">
+<img src="image/1/mp_search.jpg" width="300"> <img src="image/1/qr_code.jpg" width="300">
 
 
-<img src="image/1/qr_code.jpg" width="300">
 
     
 我们最终所要实现的效果图如下:
@@ -130,11 +136,16 @@ rpx与px概念
 
 3. 状态变化
 
+## 1.3 发布TODOLIST
 
 # 参考资料
+
 微信小程序认证有哪些主体类别？  https://www.sohu.com/a/165305873_99940999
+
 主体功能差异 http://blog.sina.com.cn/s/blog_ed7dae4a0102xjb2.html
+
 微信小程序原理 http://eux.baidu.com/blog/fe/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E6%9E%B6%E6%9E%84%E5%8E%9F%E7%90%86
 
 开发者工具 https://blog.csdn.net/qq_17470165/article/details/80200857
+
 https://blog.csdn.net/u012767761/article/details/81151830
