--- a/0.提纲.md
+++ b/0.提纲.md
@@ -1,12 +1,225 @@
-# 提纲
+# 20天20个小程序 （适当的修改删减）
 
-## intro
+## 简介
+根据实战20个小程序项目来全面的介绍微信小程序，包括以下内容
+1. 从零开始示范如何实现小程序，包括开发环境准备、代码实现、小程序上线部署以及运营推广。
+2. 20个示例小程序，几乎覆盖所有api接口。
+3. 不仅介绍代码如何实现，同时介绍不同业务场景下实践所遇到的坑。
+4. 除了基础知识的介绍，也会引入时下各种流行的框架的。
 
-* 代码介绍。 灰体字表示拓展知识。
-* 注册小程序账号
-* 下载小程序开发工具
+## 提纲
+
+第一章 **todolist待办事项小程序**
+
+1.1 什么是小程序
+    
+    简单介绍小程序的背景知识
+    
+1.2 开发之前的的准备
+    
+    包括账号的创建、主体选择的事项、开发工具的下载
+
+1.3 开发todolist 
+    
+    从页面设计到代码一步一步的介绍如何从0开始实现一个纯客户端的小程序。
+
+1.4 发布todolist
+
+    完成本地的开发工作，介绍如何使用开发工具提交代码，如何使用公众平台发布代码，直到在微信中能够被使用
+
+第二章 **todolist2**
+
+2.1 todolist2 vs todolist
+   
+    介绍第一章的纯客户端todolist小程序存在的问题，并演示todolist2的功能
+    
+
+2.2 开发todolist2
+
+    主要介绍todolist2的服务端开发，包括nodejs的服务端开发以及mysql的建立
+      
+
+2.3 增加登录功能
+    
+    讲解登录功能如何实现。
+
+2.4 发布todolist2
+
+    介绍服务器端的发布流程，并引入云开发方式。
+
+第三章 **打卡小程序（腾讯云开发）**
+
+3.1 什么是腾讯云开发
+    
+    介绍腾讯云开发的基本流程与优势
+
+3.2 开发打卡小程序
+
+    介绍如何利用腾讯云提供的wafersdk开发一个打卡小程序
+
+3.3 发布打卡小程序
+
+    介绍如何利用腾讯云的发布功能
 
 
-##
-https://github.com/Tencent/westore
-* 介绍框架
+第四章 **天气小程序 云函数开发**
+
+4.1 什么是云函数开发
+
+4.2 开发 天气小程序
+
+    介绍如何利用云函数开发的方式开发
+    
+4.3 发布 天气小程序
+
+    介绍如何利用函数开发的部署    
+
+第五章 **婚礼邀请函 分享接口的使用**
+
+5.1 婚礼邀请函
+    
+    简答介绍婚礼邀请函小程序的相关知识
+
+5.2 开发婚礼邀请函
+
+    介绍如何开发，如何分享到朋友圈的 canvas的使用。
+
+
+第六章 **聊天室 websocket的使用**
+
+6.1 聊天室简介
+
+    简单介绍聊天室的相关知识
+    
+6.2 开发聊天室
+    
+    介绍websocket开发知识。
+    
+6.3 发布聊天室    
+
+    websocket的服务端的发布
+    
+第七章 **仿知乎小程序 taro框架开发**
+
+7.1 什么是taro框架
+
+7.2 开发仿知乎小程序
+
+7.3 发布
+
+    taro的特性可以发布到微信小程序/百度小程序/支付宝小程序/字节跳动小程序
+
+第八章 **附近的小程序**
+
+8.1 开发前准备
+
+    介绍附近的小程序开发知识
+    
+8.2 开发附近的小程序
+    
+    附近的小程序的开发。
+
+第九章 **lbs小程序**
+
+9.1 什么是lbs
+
+    位置信息接口，地图接口的介绍。
+
+9.2 开发lbs小程序
+
+    位置信息接口，地图接口的介绍。
+
+第十章 **小程序插件开发**
+
+10.1 什么是小程序插件开发
+ 
+10.2 开发小程序插件
+
+10.3 发布小程序插件
+
+第十一章 **音乐播放器**
+
+11.1 简介音乐播放器
+
+11.2 开发音乐播放器
+
+
+第十二章 **指纹识别**
+
+12.1 简介指纹识别
+
+12.2 开发指纹识别小程序
+
+第十三章 **图片ocr识别小程序**
+
+13.1 介绍图片ocr识别相关接口
+
+13.2 开发图片ocr识别
+
+第十四章 **微信运动pk小程序**
+
+14.1 介绍微信运动
+
+14.2 开发微信运动pk
+
+第十五章 **卡券小程序**
+
+15.1 微信卡券介绍
+
+15.2 开发微信卡券小程序
+ 
+
+第十六章 **客服小程序**
+
+16.1 介绍客服相关api
+
+16.2 开发客服小程序
+
+第十七章 **商城小程序（1）**
+
+17.1 开发前准备
+
+    介绍微信支付接口的开通，物流接口的开通
+    
+17.2 开发商城小程序
+    
+    商城首页的开发，下单接口的开发，支付接口的对接开发，物流接口的开发。
+
+第十八章 **商城小程序（2）**
+
+18.1 开发前准备
+
+    介绍微信支付接口的开通，物流接口的开通
+    
+18.2 开发商城小程序
+    
+    商城首页的开发，下单接口的开发，支付接口的对接开发，物流接口的开发。    
+
+
+
+第十九章 **视频直播小程序** 
+
+19.1 视频直播
+
+    简单介绍视频直播的相关知识。
+
+19.2 开发视频直播小程序
+
+    一步一步开发视频直播小程序
+
+第二十章 **加密的todolist 反编译小程序知识**
+
+20.1 什么是反编译
+
+    介绍小程序的反编译的相关知识。
+
+20.2 反编译todolist小程序
+ 
+    一步一步介绍如何反编译一个小程序。
+
+20.3 反反编译todolist小程序 
+        
+    介绍如何开发一个能够反'反编译'的todolist小程序。
+
+
+
