--- a/1.todolist.md
+++ b/1.todolist.md
@@ -16,14 +16,14 @@
    + 原理上来说，一个微信小程序是一个代码包，代码包里打包了javascript/wxml/wxss的代码。
    这个代码包可以运行在三个不同的环境上，ios、android以及小程序开发者工具上。
   
-      ```
-      运行原理
-      微信小程序的运行环境包含两个层
-      在ios上，小程序的javascript代码运行在 JavaScriptCore 中
-      在android上，小程序的javascript是通过 X5 内核来解析
-      在
-               
-       ```
+
+>  *运行原理*
+>    
+>  微信小程序的运行环境包含两个层
+>      在ios上，小程序的javascript代码运行在 JavaScriptCore 中
+>      在android上，小程序的javascript是通过 X5 内核来解析
+>      在
+
    
 ### 1.1.2 开发的准备工作
   
@@ -84,17 +84,18 @@
    可以看到微信公众平台上提供了很多功能。功能主要划分为主要有管理、统计、功能、开发、推广和设置板块，
    具体的使用场景在后续章节中会结合示例小程序进行详细介绍。
    
-   <img src="image/1/mp_webui.jpg" width="300">
+   <img src="image/1/mp_webui.png" width="300">
    
    + 下载微信小程序开发工具
    
-   注册完微信公众平台账号之后，在开始小程序的开发之前，我们还需要下载微信官方提供的小程序开发工具。
-
+   注册完微信公众平台账号之后，在开始小程序的开发之前，我们还需要下载微信官方提供的小程序开发工具，官方下载地址（https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html）。
+   在后面的章节中，会结合示例来介绍微信开发工具的使用。 
+    
 
 ## 1.2 开发TODOLIST
 
 这一节中，我们将详细介绍如何实现一个纯客户端的todolist小程序。
-在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github地址()下载。
+在微信小程序中搜索“20天之todolist”或者扫描下图二维码，可以进行体验最终效果。完整代码可以在github(https://github.com/tostoy/20-todolist)上下载。
 
 <img src="image/1/mp_search.jpg" width="300"> <img src="image/1/qr_code.jpg" width="300">
 
@@ -104,6 +105,39 @@
 我们最终所要实现的效果图如下:
     
 <img src="image/1/demo.jpg" width="300">    
+  
+
+
+### 创建项目
+
+首先打开微信开发工具，点击"+"位置新建项目。
+<img src="image/1/open_develop_tool.png" width="300">  
+然后进入配置填写界面，注意其中appID应当填入微信公众平台的「开发-开发设置-开发者ID里」的appID。
+<img src="image/1/create_project.png" width="300"> <img src="image/1/appid.png" width="300">      
+
+进入开发工具页面，可以看到跟chrome浏览器的开发者工具很像。
+
+<img src="image/1/webui.png" width="300">    
+
+```
+1. 菜单栏
+    
+  包括界面
+         
+2. 工具栏
+
+3. 模拟器
+
+   模拟器可以模拟小程序在微信客户端的表现。小程序的代码通过编译后可以在模拟器上直接运行。
+   开发者可以选择不同的设备，也可以添加自定义设备来调试小程序在不同尺寸机型上的适配问题
+   
+4. 编辑器
+
+5. 调试器
+
+
+```
+  
   
 
 一个小程序代码典型结构是这样：
@@ -116,7 +150,6 @@
 index.js
 index.wxml
 .wxss 
-
 
 
 ```
