--- a/1.todolist.md
+++ b/1.todolist.md
@@ -111,40 +111,92 @@
 ### 创建项目
 
 首先打开微信开发工具，点击"+"位置新建项目。
+
 <img src="image/1/open_develop_tool.png" width="300">  
+
 然后进入配置填写界面，注意其中appID应当填入微信公众平台的「开发-开发设置-开发者ID里」的appID。
+
 <img src="image/1/create_project.png" width="300"> <img src="image/1/appid.png" width="300">      
 
 进入开发工具页面，可以看到跟chrome浏览器的开发者工具很像。
 
-<img src="image/1/webui.png" width="300">    
+<img src="image/1/webui.png" width="600">    
 
 ```
 1. 菜单栏
     
-  包括界面
+  并不常用，最主要的功能包括项目新建/打开、工具栏设置以及界面外观操作的设置。
          
 2. 工具栏
 
+  开发中经常需要使用，包括小程序编译、清空缓存、上传代码等重要功能。  
+
 3. 模拟器
 
-   模拟器可以模拟小程序在微信客户端的表现。小程序的代码通过编译后可以在模拟器上直接运行。
-   开发者可以选择不同的设备，也可以添加自定义设备来调试小程序在不同尺寸机型上的适配问题
+  模拟器可以模拟小程序在微信客户端的表现。小程序的代码通过编译后可以在模拟器上直接运行。
+  开发者可以选择不同的设备，也可以添加自定义设备来调试小程序在不同尺寸机型上的适配问题
    
 4. 编辑器
 
+  左边是树型结构的文件导航栏，右边是选中文件的内容编辑器。  
+
 5. 调试器
 
+  这一部分跟chrome浏览器的调试器很像，大多数tab项在开发调试中都起到很重要的作用。
+  
 
 ```
   
-  
+创建项目之后，开发者工具自动生成了「hello world」样例代码。
+在编辑器中，可以看到样例代码有四种类型文件，也可以看到小程序代码典型结构。
 
-一个小程序代码典型结构是这样：
+| 文件类型 | 必填 |  作用 |
+| ------  | ---  |  ----  |
+| js  | 是  |  页面逻辑层  |
+| wxml  | 是  | 页面视图  |
+| wxss  | 否 | 页面样式  |
+| json  | 否  | 页面配置  |
 
-<img src="image/1/code_proto.jpg" width="300">    
+
+<img src="image/1/code_proto.png" width="300">    
 
 
+
+1. 工具配置 project.config.json 
+
+   小程序开发者工具在每个项目的根目录都会生成一个 project.config.json，主要是与业务无关的开发者工具的相关配置，其中会包括编辑器的颜色、代码上传时自动压缩等等一系列选项。
+    
+2. 小程序配置 app.json
+    
+   `app.json` 是当前小程序的全局配置，包括了小程序的所有页面路径、界面表现、网络超时时间、底部 tab 等。
+    样例代码中的 `app.json` 配置内容如下：
+    
+    ```json
+    {
+      "pages":[
+        "pages/index/index",
+        "pages/logs/logs"
+      ],
+      "window":{
+        "backgroundTextStyle":"light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "WeChat",
+        "navigationBarTextStyle":"black"
+      }
+    }
+
+    ```
+    其中`pages`字段表示当前小程序的所有路径，第一个路径是小程序打开时的默认路径。`window`字段定义了页面顶部的全局配置，包括颜色文字是否加粗。        
+
+3. 页面配置 pages/index/index.json
+
+    与`app.json`类似，只是`pages/index/index.json`位于单个页面的文件目录下，表示当前页面路径的顶部配置。
+    
+4. 小程序样式 app.wxss 
+
+   `wxss`语法跟
+    
+    
 其中页面由以下这几个部分组成。
 
 index.js
