--- a/1.todolist.md
+++ b/1.todolist.md
@@ -148,7 +148,8 @@
 ```
   
 创建项目之后，开发者工具自动生成了「hello world」样例代码。
-在编辑器中，可以看到样例代码有四种类型文件，也可以看到小程序代码典型结构。
+在编辑器中，可以看到样例代码有四种类型文件。熟悉网页编程的人都直到，网页编程采用的是 HTML + CSS + JS 这样的组合，其中 `HTML` 是用来描述当前这个页面的结构，`CSS` 用来描述页面的样子，`JS` 通常是用来处理这个页面和用户的交互。
+小程序类似地提供了 WXML + WXSS + JS 的组合。
 
 | 文件类型 | 必填 |  作用 |
 | ------  | ---  |  ----  |
@@ -156,6 +157,9 @@
 | wxml  | 是  | 页面视图  |
 | wxss  | 否 | 页面样式  |
 | json  | 否  | 页面配置  |
+
+
+同时我们也可以看到小程序代码典型结构。
 
 
 <img src="image/1/code_proto.png" width="300">    
@@ -194,8 +198,66 @@
     
 4. 小程序样式 app.wxss 
 
-   `wxss`语法跟
+   `wxss`文件具有`css`大部分的特性，在`app.wxss`中定义了全局样式。样例代码中 `app.wxss` 内容如下：
+   ```css
+    /**app.wxss**/
+    .container {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      padding: 200rpx 0;
+      box-sizing: border-box;
+    } 
+    ```
+    可以看到与普通的 `css` 文件很接近，其中一个细微的不同是 ``` padding: 200rpx 0;```，小程序新增了尺寸单位`rpx`。
     
+>     *rpx与px概念*
+>      在h5开发中， rpx的意思是responsive pixel
+>      可见在不同设备下， 35px和35rpx的区别。
+>      （图片）
+>      微信规定屏幕宽为750rpx。
+>      简单来说，rpx iphone6的设备宽高比为750 * 1334，如果设计给出的基于iphon6的设计来说
+>     
+   
+   
+5. 页面样式 pages/index/index.wxss
+    
+    与 `app.wxss` 类似，`pages/index/index.wxss`位于单个页面的文件目录下，表示当前页面路径的局部样式。
+
+6. 页面视图 pages/index/index.wxml
+
+    `wxml`语法和`html`非常接近，增加了小程序特有的标签和属性。
+    样例代码中`index.wxml` 内容如下：
+    
+    ```html
+    <!--index.wxml-->
+    <view class="container">
+      <view class="userinfo">
+        <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+        <block wx:else>
+          <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+          <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+        </block>
+      </view>
+      <view class="usermotto">
+        <text class="user-motto">{{motto}}</text>
+      </view>
+    </view>
+
+    ```  
+    如果你了解MVVM开放模式的框架(如Vue，React)，对 `wxml`的代码就会感到熟悉。
+    其中
+    
+    
+    
+  
+7. 小程序逻辑 app.js
+   
+
+8. 页面逻辑 pages/index/index.js
+       
     
 其中页面由以下这几个部分组成。
 
@@ -204,14 +266,6 @@ index.wxml
 .wxss 
 
 
-```
-rpx与px概念
-在h5开发中， rpx的意思是responsive pixel
-可见在不同设备下， 35px和35rpx的区别。
-（图片）
-微信规定屏幕宽为750rpx。
-简单来说，rpx iphone6的设备宽高比为750 * 1334，如果设计给出的基于iphon6的设计来说
-```
 
 
 
