--- a/1.todolist.md
+++ b/1.todolist.md
@@ -288,3 +288,5 @@ index.wxml
 开发者工具 https://blog.csdn.net/qq_17470165/article/details/80200857
 
 https://blog.csdn.net/u012767761/article/details/81151830
+
+架构原理 https://juejin.im/entry/5b8de6b7f265da432f655528
