--- a/20.反编译.md
+++ b/20.反编译.md
@@ -1,8 +1,8 @@
-# 反编译
+# 20 反编译
 
 (需要微信号)
 
-##  intro
+##  20.1 什么是反编译
 
 微信小程序是可以被反编译的。当你对某个小程序的源码感兴趣的话，
 当我们点击"上传"按钮时， 微信开发者工具会将客户端代码进行“编译”并打包成一个.wxapkg文件，
@@ -10,20 +10,22 @@
 
 所以如果我们要反编译微信小程序的话，关键是拿到这个.wxapkg文件。
 
-### 获取小程序的.wxapkg文件
+## 20.2 反编译todolist 
 
-
-### 反编译包
+获取小程序的.wxapkg文件
 
 你可能会认为这个文件类似于安卓手机的.apk和苹果手机的.ipa。
 
 
 图片
 
-###
+## 20.3 反'反编译'小程序 todolist3
+
 
 
 ## reference 
 
-https://juejin.im/post/5af17b72518825383611ac38
+反编译 https://juejin.im/post/5af17b72518825383611ac38
 https://blog.csdn.net/qq_33858250/article/details/80543815
+代码还原 https://juejin.im/post/5af52cf46fb9a07aa34a4dcb
+反反编译 
