--- a/1.todolist.md
+++ b/1.todolist.md
@@ -228,8 +228,8 @@
 
 6. 页面视图 pages/index/index.wxml
 
-    `wxml`语法和`html`非常接近，增加了小程序特有的标签和属性。
-    样例代码中`index.wxml` 内容如下：
+    
+   样例代码中`index.wxml` 内容如下：
     
     ```html
     <!--index.wxml-->
@@ -247,17 +247,80 @@
     </view>
 
     ```  
-    如果你了解MVVM开放模式的框架(如Vue，React)，对 `wxml`的代码就会感到熟悉。
-    其中
+   `wxml`语法和`html`非常接近，增加了小程序特有的标签和属性。如果你了解MVVM开发模式的框架(如Vue，React)，对 `wxml`的代码就会感到熟悉。
+   
+    1. 标签
+    在常规的html开发中，我们往往用会写一些`div`,`input`，`span`这些基础标签。然后我们看到一些网页上的复杂组件(比如日历组件)，其实是由这些基础标签组合实现的。
+    在MVVM模式中，复杂组件的实现细节会被封装起来，当需要使用时可以直接以标签方式来使用。
+    比如Vue中可以通过`import Calendar from '@/compnents/Calendar`来引入`calendar`标签，然后在视图层中直接以`<calendar></calendar>`这种方式使用。
+    示例代码中用到的`view`，`button`，`text`等标签，可以理解成微信小程序官方提前封装好的一些组件。在后续的章节中，本书会介绍更多的微信官方的组件，比如地图、视频等等，
+    同时也会示范如何编写自定义组件。   
     
-    
+    2. 属性
+    在示例代码中，存在`class`，`wx:if`和`bindtap`等属性，这里除了`class`属性和`html`中一样都是表示样式以外，`wx:if`和`bindtap`的内容，比如`{{!hasUserInfo && canIUse}}` ，`getUserInfo`都是定义在js文件中，可能是函数也可能是变量。
+    这正是体现了MVVM模式中的视图层与逻辑层分离的思想。
+    这里`{{}}`是表示把一个变量绑定到视图上，我们称之为数据绑定。当单纯的数据绑定逻辑不足以表示变量与视图的关系时，可以用到微信提供的`if/else`，`for`等逻辑控制能力，这些控制能力需要使用`wx:`作为前缀。
+        
     
   
 7. 小程序逻辑 app.js
    
-
+   前面提到`js`文件是负责逻辑层的，那当小程序启动的，第一个启动的逻辑代码就是`app.js`。
+   示例文件中`app.js`内容如下：
+   ```javascript
+   //app.js
+   App({
+     onLaunch: function () {
+       // 展示本地存储能力
+       var logs = wx.getStorageSync('logs') || []
+       logs.unshift(Date.now())
+       wx.setStorageSync('logs', logs)
+   
+       // 登录
+       wx.login({
+         success: res => {
+           // 发送 res.code 到后台换取 openId, sessionKey, unionId
+         }
+       })
+       // 获取用户信息
+       wx.getSetting({
+         success: res => {
+           if (res.authSetting['scope.userInfo']) {
+             // 已经授权，可以直接调用 getUserInfo 获取头像昵称，不会弹框
+             wx.getUserInfo({
+               success: res => {
+                 // 可以将 res 发送给后台解码出 unionId
+                 this.globalData.userInfo = res.userInfo
+   
+                 // 由于 getUserInfo 是网络请求，可能会在 Page.onLoad 之后才返回
+                 // 所以此处加入 callback 以防止这种情况
+                 if (this.userInfoReadyCallback) {
+                   this.userInfoReadyCallback(res)
+                 }
+               }
+             })
+           }
+         }
+       })
+     },
+     globalData: {
+       userInfo: null
+     }
+   })
+    ```
+   这段代码我们暂时需要关注在`App()`函数中所传递的参数，定义了两个字段，`onLaunch`和`globalData`。
+   `onLaunch`对应的是个函数，表示小程序启动时会调用的逻辑，可以看到其中用到了一些`wx.`前缀的函数，这部分函数是微信小程序定义的api，后续章节会详细介绍各种api，
+   `globalData`对应的是个对象，表示挂载在app层的属性，可以在子页面中进行使用。
+   
 8. 页面逻辑 pages/index/index.js
-       
+   
+   `pages/index/index.js`负责当进入当前页面所执行的逻辑。
+   样例代码中截取部分代码如下：
+    ```
+    
+    ```
+   通过`this.app.globalData`的方式来进行使用。
+           
     
 其中页面由以下这几个部分组成。
 
