--- a/13.ocr.md
+++ b/13.ocr.md
@@ -3,6 +3,8 @@
 
 # 13.2 开发ocr
 
+调用 ci.ocr 即可识别印刷体文字，接口参数与身份证识别类似，不过需要注意的是 OCR 接口仅支持对单个图片的识别，一次只能识别一张图片。
+
 # refer
 
 图像识别 https://cloud.tencent.com/developer/article/1007062
